--- a/settings.py.example
+++ b/settings.py.example
@@ -1,5 +1,5 @@
-# Just a dummy local file to put the settings in so
-# I don't commit them in.
+# Example settings file; set the values below, and rename file
+# to 'settings.py'
 
 wifi_name = 'MyNetworkName'
 wifi_pass = 'MyWifiPassword'
